[gd_scene load_steps=4 format=3 uid="uid://dmiaekpq8rmha"]

[ext_resource type="Script" path="res://Scripts/MenuScripts/AssetsScripts/CustomButton.gd" id="1_mg0ev"]
[ext_resource type="AudioStream" uid="uid://t3hpoliqdl0o" path="res://Assets/Menu/Sounds and Music/UI_Quirky20.mp3" id="2_scgu2"]
[ext_resource type="AudioStream" uid="uid://nj0rdmty4be5" path="res://Assets/Menu/Sounds and Music/UI_Quirky_51.mp3" id="3_dmew1"]

[node name="CustomButton" type="Button"]
anchors_preset = -1
anchor_right = 2.364
anchor_bottom = 1.849
offset_right = -3299.11
offset_bottom = -1712.78
scale = Vector2(3.66125, 7.02641)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.756863, 0.745098, 0.396078, 1)
flat = true
expand_icon = true
script = ExtResource("1_mg0ev")

[node name="audio_pressed" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_scgu2")

[node name="audio_touch" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_dmew1")

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
